<?xml version="1.0"?>
<package format="2">
  <name>swarm_center</name>
  <version>1.1.0</version>
  <description>The swarm_center package</description>

  <maintainer email="ye@iquotient-robotics.com">Ye Tian</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/I-Quotient-Robotics/swarm_ros</url>
  <url type="repository">https://github.com/I-Quotient-Robotics/swarm_ros</url>
  <url type="bugtracker">https://github.com/I-Quotient-Robotics/swarm_ros/issues</url>

  <author email="ye@iquotient-robotics.com">Ye Tian</author>

  <build_depend>roslaunch</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rosbridge_server</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>

  <export>
  </export>
</package>